src/ui/readarr_ui/library/snapshots/managarr__ui__readarr_ui__library__author_details_ui__author_details_ui_tests__tests__snapshot_tests__author_details_ManualAuthorSearchConfirmPrompt_2.snap
---
source: src/ui/readarr_ui/library/author_details_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
        ╭  Test Author  ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮        
        │Author: Test Author                                                                                                                                │        
        │Status: Continuing                                                                                                                                 │        
        │Genres: science fiction                                                                                                                            │        
        │Rating: N/A                                                                                                                                        │        
        │Path: /nfs/books/Test Author                                                                                                                       │        
        │Quality Profile: Standard                                                                                                                          │        
        │Metadata Profile: Standard                                                                                                                         │        
        │Monitored: Yes                                                                                                                                     │        
        │Overview: some interesting description of the authorHe was born in Madison, Wisconsin: a city he has never really left.His first novel took him    │        
        │seven years to finish.                                                                                                                             │        
        │                                                                                                                                                   │        
        │                                         ╭─────────────────  Download Rejected Release  ──────────────────╮                                        │        
        │╭  Author Details  ──────────────────────│    Do you really want to download the rejected release: Test   │───────────────────────────────────────╮│        
        ││ Books │ History │ Author Search        │                        Torrent Release?                        │                                       ││        
        ││────────────────────────────────────────│                                                                │───────────────────────────────────────││        
        ││   Source ▼  Age        ⛔     Title     │                                                                │e         Peers        Quality         ││        
        ││=> torrent   1 days     ⛔     Test Torre│Rejection reasons:                                              │ GB       2 / 1        EPUB            ││        
        ││   usenet    1 days     ⛔     Test Usene│• Unknown quality profile                                       │ GB                    EPUB            ││        
        ││                                        │                                                                │                                       ││        
        ││                                        │                                                                │                                       ││        
        ││                                        │                                                                │                                       ││        
        ││                                        │                                                                │                                       ││        
        ││                                        │                                                                │                                       ││        
        ││                                        │                                                                │                                       ││        
        ││                                        │                                                                │                                       ││        
        ││                                        │                                                                │                                       ││        
        ││                                        │                                                                │                                       ││        
        ││                                        │╭──────────────────────────────╮╭──────────────────────────────╮│                                       ││        
        ││                                        ││              Yes             ││              No              ││                                       ││        
        ││                                        │╰──────────────────────────────╯╰──────────────────────────────╯│                                       ││        
        ││                                        ╰────────────────────────────────────────────────────────────────╯                                       ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        │╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯│        
        ╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
