src/ui/readarr_ui/library/snapshots/managarr__ui__readarr_ui__library__author_details_ui__author_details_ui_tests__tests__snapshot_tests__author_details_ManualAuthorSearchSortPrompt_2.snap
---
source: src/ui/readarr_ui/library/author_details_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
        ╭  Test Author  ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮        
        │Author: Test Author                                                                                                                                │        
        │Status: Continuing                                                                                                                                 │        
        │Genres: science fiction                                                                                                                            │        
        │Rating: N/A                                                                                                                                        │        
        │Path: /nfs/books/Test Author                                                                                                                       │        
        │Quality Profile: Standard                                                                                                                          │        
        │Metadata Profile: Comprehensive                                                                                                                    │        
        │Monitored: Yes                                                                                                                                     │        
        │Overview: some interesting description of the author He was born in Madison, Wisconsin: a city he has never really left. His first novel took him  │        
        │seven years to finish.                                                                                                                             │        
        │                                                                                                                                                   │        
        │                                                                                                                                                   │        
        │╭  Author Details  ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮│        
        ││ Books │ History │ Author Search                                                                                                                 ││        
        ││─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────││        
        ││   Source    Age        ⛔     Title                                              Indexer               Size         Peers        Quality         ││        
        ││=> torrent   1 days     ⛔     Test Torrent Release                               kickass torrents      0.0 GB       2 / 1        EPUB            ││        
        ││   usenet    1 days     ⛔     Test Usenet Release                                DrunkenSlug           0.0 GB                    EPUB            ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                          ╭───────────────────────────╮                                                          ││        
        ││                                                          │Something                  │                                                          ││        
        ││                                                          │                           │                                                          ││        
        ││                                                          │                           │                                                          ││        
        ││                                                          │                           │                                                          ││        
        ││                                                          │                           │                                                          ││        
        ││                                                          │                           │                                                          ││        
        ││                                                          │                           │                                                          ││        
        ││                                                          │                           │                                                          ││        
        ││                                                          │                           │                                                          ││        
        ││                                                          │                           │                                                          ││        
        ││                                                          │                           │                                                          ││        
        ││                                                          │                           │                                                          ││        
        ││                                                          ╰───────────────────────────╯                                                          ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        │╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯│        
        ╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
